--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   },
   "homepage": "https://github.com/Omniverse-Web3-Labs/crosschain-sdk-for-evm#readme",
   "dependencies": {
-    "@omniverselabs/contracts": "0.1.1",
-    "@openzeppelin/contracts": "^4.5.0",
-    "@truffle/hdwallet-provider": "^2.0.3",
-    "commander": "^9.3.0",
+    "@omniverselabs/contracts": "^0.2.4",
+    "@openzeppelin/contracts": "^4.7.3",
+    "@truffle/hdwallet-provider": "^2.0.14",
+    "commander": "^9.4.0",
     "config": "^3.3.7",
     "fs": "^0.0.1-security",
-    "web3": "^1.7.1"
+    "web3": "^1.7.5"
   }
 }
